APPLET_NAME = lastfm
APPLET_MAIN_FILE = lastfmapplet.py
include $(top_srcdir)/Makefile.python-applet

dist_applet_DATA =		\
	httpclient.py		\
	lastfm.py		\
	lastfmpreferences.py	\
	lastfmconfig.py		\
	lastfmexception.py	\
	imageproducer.py	\
	$(NULL)

lastfm_iconsdir = $(applet_datadir)/icons
dist_lastfm_icons_DATA =		\
	icons/ban.png			\
	icons/cd.png			\
	icons/lastfm_icon_small.png	\
	icons/love.png			\
	icons/play.png			\
	icons/skip.png			\
	icons/stop.png			\
	icons/top.png			\
	icons/black.ico			\
	icons/blue.ico			\
	icons/cd.ico			\
	icons/green.ico			\
	icons/grey.ico			\
	icons/orange.ico		\
	icons/purple.ico		\
	icons/red.ico			\
	icons/white.ico			\
	$(NULL)

